--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bandsite</title>
+    <link rel="stylesheet" href="./styles/bio.css">
 </head>
 <body>
     <header class="header">
         <nav class="primary-nav">
             <h2 class="primary-nav__heading">Bandsite</h2>
-            <div class="primary-nav__container">
-                <ul class="primary-nav__list">
-                    <li class="primary-nav__item"><a class="primary-nav__link" href="">Biography</a></li>
-                    <li class="primary-nav__item"><a class="primary-nav__link" href="">Shows</a></li>
-                </ul>
-            </div>
+            <ul class="primary-nav__list">
+                <li class="primary-nav__item"><a class="primary-nav__link primary-nav__link--active" href="">Biography</a></li>
+                <li class="primary-nav__item"><a class="primary-nav__link" href="">Shows</a></li>
+            </ul>
         </nav>
+        <section class="hero">
+            <h1 class="hero__heading">The Bees Knees</h1>
+        </section>
     </header>
 </body>
 </html>
