--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             </ul>
         </nav>
         <section class="hero">
-            <h1 class="hero__heading">The Bees Knees</h1>
+            <div class="hero__layer">
+                <h1 class="hero__heading">The Bees Knees</h1>
+            </div>
         </section>
     </header>
 </body>
