--- a/index.html
+++ b/index.html
@@ -1,25 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bandsite</title>
-    <link rel="stylesheet" href="./styles/bio.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/bio.css" />
+  </head>
+  <body>
     <header class="header">
-        <nav class="primary-nav">
-            <h2 class="primary-nav__heading">Bandsite</h2>
-            <ul class="primary-nav__list">
-                <li class="primary-nav__item"><a class="primary-nav__link primary-nav__link--active" href="">Biography</a></li>
-                <li class="primary-nav__item"><a class="primary-nav__link" href="">Shows</a></li>
-            </ul>
-        </nav>
-        <section class="hero">
-            <div class="hero__layer">
-                <h1 class="hero__heading">The Bees Knees</h1>
-            </div>
-        </section>
+      <nav class="primary-nav">
+        <h2 class="primary-nav__heading">Bandsite</h2>
+        <ul class="primary-nav__list">
+          <li class="primary-nav__item">
+            <a class="primary-nav__link primary-nav__link--active" href=""
+              >Biography</a
+            >
+          </li>
+          <li class="primary-nav__item">
+            <a class="primary-nav__link" href="">Shows</a>
+          </li>
+        </ul>
+      </nav>
+      <section class="hero">
+        <div class="hero__layer">
+          <h1 class="hero__heading">The Bees Knees</h1>
+        </div>
+      </section>
     </header>
-</body>
+    <main>
+      <section class="about">
+        <h2 class="about__heading">About the Musicians</h2>
+        <img class="about__img" src="./assets/Images/band.jpg" alt="The Bees Knees live performance">
+        <p class="about__quote">
+          “We push each other to be the best. It`s not uncommon for one of us to
+          say `this needs to be better, back to the drawing board`”
+        </p>
+        <p class="about__quote">- Lead vocalist of The Bees Knees</p>
+        <h3 class="about__heading__band">The Bees Knees</h3>
+        <p class="about__text">
+          The Bees Knees is a pop rock band originating from San Francisco,
+          California. The band consists a dynamic lineup featuring two lead
+          vocalists, two guitarists, a bassist, a keyboardist and a drummer. The
+          band achieved its first commercial success as an unsigned act, drawing
+          attention from their future manager. Having extensive experience
+          working with both new and seasoned acts, the manager was confident the
+          band could succeed even further with more support, pushing The Bees
+          Knees to sign with a well known record label. <br /><br />
+          From there, the band has soared, gaining international recognition and
+          ranking in the top 10 on the Poster Charts. New fans immediately fell
+          in love with the band’s original and organic attitude, solidifying
+          their place as one of the hottest and fastest up and coming acts of
+          this century. Fans affectionately refer to themselves as “The Hive”
+          and are drawn to their candid and authentic performances on stage. The
+          Bees Knees are currently recording their second studio album, looking
+          to be released in early 2024.
+        </p>
+      </section>
+      <section class="photo-gallery">
+        <h2 class="photo-gallery__heading">Photo Gallery</h2>
+        <div class="photo-gallery__conainer">
+            <img class="photo-gallery__img" src="./assets/Images/Photo-gallery-1.jpg" alt="Concert Photo">
+            <img class="photo-gallery__img" src="./assets/Images/Photo-gallery-2.jpg" alt="Concert Photo">
+            <img class="photo-gallery__img" src="./assets/Images/Photo-gallery-3.jpg" alt="Concert Photo">
+            <img class="photo-gallery__img" src="./assets/Images/Photo-gallery-4.jpg" alt="Concert Photo">
+            <img class="photo-gallery__img" src="./assets/Images/Photo-gallery-5.jpg" alt="Concert Photo">
+            <img class="photo-gallery__img" src="./assets/Images/Photo-gallery-6.jpg" alt="Concert Photo">
+            <img class="photo-gallery__img" src="./assets/Images/Photo-gallery-7.jpg" alt="Concert Photo">
+            <img class="photo-gallery__img" src="./assets/Images/Photo-gallery-8.jpg" alt="Concert Photo">
+            <img class="photo-gallery__img" src="./assets/Images/Photo-gallery-9.jpg" alt="Concert Photo">
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
