added html code for the footer

--- a/index.html
+++ b/index.html
@@ -71,5 +71,41 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+        <h2 class="footer__heading">Get In Touch</h2>
+        <div class="footer__container">
+            <img class="footer__icon" src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram icon">
+            <img class="footer__icon" src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook icon">
+            <img class="footer__icon" src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter icon">
+        </div>
+        <div class="company">
+            <div class="company__container">
+                <h3 class="company__heading">The Bees Knees Management</h3>
+                <p class="company__text">
+                    503 Broadway Penthouse,<br>
+                    New York, NY 10012, USA<br>
+                </p>
+                <a class="company__email" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
+            </div>
+            <div class="company__container">
+                <h3 class="company__heading">Limitless Artist Group</h3>
+                <p class="company__text">
+                    Booking Agent for<br>
+                    US / South America / Japan<br>
+                </p>
+                <a class="company__email" href="mailto:bookings@limitlessag.com">bookings@limitlessag.com</a>
+            </div>
+            <div class="company__container">
+                <h3 class="company__heading">ARCH Entertainment</h3>
+                <p class="company__text">
+                    Booking Agent for<br>
+                    UK / EU / AU<br>
+                </p>
+                <a class="company__email" href="mailto:bookings@archentertainment.com">bookings@archentertainment.com</a>
+            </div>
+        </div>
+        <img class="footer__logo" src="./assets/Logo/Logo-bandsite.svg" alt="Bandsite logo">
+        <p class="footer__text">Copyright The Bees Knees © 2023 All Rights Reserved</p>
+    </footer>
   </body>
 </html>
