added some styling to footer

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </section>
     </main>
     <footer class="footer">
-        <h2 class="footer__heading">Get In Touch</h2>
+        <h2 class="footer__heading">Get in Touch</h2>
         <div class="footer__container">
             <img class="footer__icon" src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram icon">
             <img class="footer__icon" src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook icon">
