using mixins instead of classes for sont styles due to not being able to extend class inside a media query

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <nav class="primary-nav">
-        <h2 class="primary-nav__heading">Bandsite</h2>
+        <img class="primary-nav__logo" src="./assets/Logo/Logo-bandsite.svg" alt=" Bandsite logo">
         <ul class="primary-nav__list">
           <li class="primary-nav__item">
             <a class="primary-nav__link primary-nav__link--active" href=""
