--- a/index.html
+++ b/index.html
@@ -30,35 +30,42 @@
     <main>
       <section class="about">
         <h2 class="about__heading">About the Musicians</h2>
-        <img class="about__img" src="./assets/Images/band.jpg" alt="The Bees Knees live performance">
-        <p class="about__quote">
-          “We push each other to be the best. It`s not uncommon for one of us to
-          say `this needs to be better, back to the drawing board`”
-        </p>
-        <p class="about__quote">- Lead vocalist of The Bees Knees</p>
-        <h3 class="about__heading__band">The Bees Knees</h3>
-        <p class="about__text">
-          The Bees Knees is a pop rock band originating from San Francisco,
-          California. The band consists a dynamic lineup featuring two lead
-          vocalists, two guitarists, a bassist, a keyboardist and a drummer. The
-          band achieved its first commercial success as an unsigned act, drawing
-          attention from their future manager. Having extensive experience
-          working with both new and seasoned acts, the manager was confident the
-          band could succeed even further with more support, pushing The Bees
-          Knees to sign with a well known record label. <br /><br />
-          From there, the band has soared, gaining international recognition and
-          ranking in the top 10 on the Poster Charts. New fans immediately fell
-          in love with the band’s original and organic attitude, solidifying
-          their place as one of the hottest and fastest up and coming acts of
-          this century. Fans affectionately refer to themselves as “The Hive”
-          and are drawn to their candid and authentic performances on stage. The
-          Bees Knees are currently recording their second studio album, looking
-          to be released in early 2024.
-        </p>
+        <div class="about__container">
+            <img class="about__img" src="./assets/Images/band.jpg" alt="The Bees Knees live performance">
+            <p class="about__quote">
+              “We push each other to be the best. It`s not uncommon for one of us to
+              say `this needs to be better, back to the drawing board`”
+            </p>
+            <p class="about__quote">- Lead vocalist of The Bees Knees</p>
+            <h3 class="about__sub-heading">The Bees Knees</h3>
+            <div class="about__sub-container">
+                <p class="about__text">
+                    The Bees Knees is a pop rock band originating from San Francisco,
+                    California. The band consists a dynamic lineup featuring two lead
+                    vocalists, two guitarists, a bassist, a keyboardist and a drummer. The
+                    band achieved its first commercial success as an unsigned act, drawing
+                    attention from their future manager. Having extensive experience
+                    working with both new and seasoned acts, the manager was confident the
+                    band could succeed even further with more support, pushing The Bees
+                    Knees to sign with a well known record label.
+                  </p>
+                  <p class="band__text">
+                      From there, the band has soared, gaining international recognition and
+                      ranking in the top 10 on the Poster Charts. New fans immediately fell
+                      in love with the band’s original and organic attitude, solidifying
+                      their place as one of the hottest and fastest up and coming acts of
+                      this century. Fans affectionately refer to themselves as “The Hive”
+                      and are drawn to their candid and authentic performances on stage. The
+                      Bees Knees are currently recording their second studio album, looking
+                      to be released in early 2024.
+                  </p>
+        </div>
+        
+        </div>
       </section>
       <section class="photo-gallery">
         <h2 class="photo-gallery__heading">Photo Gallery</h2>
-        <div class="photo-gallery__conainer">
+        <div class="photo-gallery__container">
             <img class="photo-gallery__img" src="./assets/Images/Photo-gallery-1.jpg" alt="Concert Photo">
             <img class="photo-gallery__img" src="./assets/Images/Photo-gallery-2.jpg" alt="Concert Photo">
             <img class="photo-gallery__img" src="./assets/Images/Photo-gallery-3.jpg" alt="Concert Photo">
