Added styling for tablet and desktop size throughout the page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               “We push each other to be the best. It`s not uncommon for one of us to
               say `this needs to be better, back to the drawing board`”
             </p>
-            <p class="about__quote">- Lead vocalist of The Bees Knees</p>
+            <p class="about__artist">- Lead vocalist of The Bees Knees</p>
             <h3 class="about__sub-heading">The Bees Knees</h3>
             <div class="about__sub-container">
                 <p class="about__text">
