Fixed the padding for mobile size

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     band could succeed even further with more support, pushing The Bees
                     Knees to sign with a well known record label.
                   </p>
-                  <p class="band__text">
+                  <p class="about__text about__text--padding">
                       From there, the band has soared, gaining international recognition and
                       ranking in the top 10 on the Poster Charts. New fans immediately fell
                       in love with the band’s original and organic attitude, solidifying
