added some styling to tablet and desktop sizes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <section class="about">
         <h2 class="about__heading">About the Musicians</h2>
         <div class="about__container">
-            <img class="about__img" src="./assets/Images/band.jpg" alt="The Bees Knees live performance">
+            <div class="about__img"></div>
+            <!-- <img class="about__img" src="./assets/Images/band.jpg" alt="The Bees Knees live performance"> -->
             <p class="about__quote">
               “We push each other to be the best. It`s not uncommon for one of us to
               say `this needs to be better, back to the drawing board`”
