Added some html and styling to the comment section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,19 @@
           </div>
         </div>
       </section>
+      <section class="comment">
+        <h2 class="comment__heading">Join the Conversation</h2>
+        <div class="comment__container">
+          <img class="comment__avatar" src="./assets/images/Mohan-muruge.jpg" alt="Avatar Image">
+            <form class="comment__form" action="">
+              <label class="comment__label" for="name">Name</label>
+              <input class="comment__input" type="text" name="name" id="name" placeholder="Enter your name">
+              <label class="comment__label" for="comment">Comment</label>
+              <textarea class="comment__txt-area" name="comment" id="comment" cols="30" rows="5" placeholder="Add a new comment"></textarea>
+              <button class="comment__button">Comment</button>
+            </form>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__container">
