Added some html and styling to comments section

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </section>
       <section class="comment">
         <h2 class="comment__heading">Join the Conversation</h2>
-        <div class="comment__container">
+        <div class="comment__top">
           <img class="comment__avatar" src="./assets/images/Mohan-muruge.jpg" alt="Avatar Image">
             <form class="comment__form" action="">
               <label class="comment__label" for="name">Name</label>
@@ -132,6 +132,20 @@
               <textarea class="comment__txt-area" name="comment" id="comment" cols="30" rows="5" placeholder="Add a new comment"></textarea>
               <button class="comment__button">Comment</button>
             </form>
+        </div>
+        <div class="comment__bottom">
+          <div class="comment__bottom-container">
+            <div class="comment__bottom-left">
+              <div class="comment__bottom-avatar"></div>
+            </div>
+            <div class=" comment__bottom-right">
+              <div class="comment__bottom-right-container">
+                <h3 class="comment__name">dvdvdvdv</h3>
+                <h4 class="comment__date">11/02/2023</h4>
+              </div>
+              <p class="comment__text">ddfdfdfdfdfdfdfdddffdfdfdfdfdffd</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
@@ -199,5 +213,6 @@
         </p>
       </div>
     </footer>
+    <script src="./scripts/index-page.js"></script>
   </body>
 </html>
