Added some jd for the comment section

--- a/index.html
+++ b/index.html
@@ -130,23 +130,10 @@
               <input class="comment__input" type="text" name="name" id="name" placeholder="Enter your name">
               <label class="comment__label" for="comment">Comment</label>
               <textarea class="comment__txt-area" name="comment" id="comment" cols="30" rows="5" placeholder="Add a new comment"></textarea>
-              <button class="comment__button">Comment</button>
+              <input class="comment__btn" type="submit" value="COMMENT">
             </form>
         </div>
-        <div class="comment__bottom">
-          <div class="comment__bottom-container">
-            <div class="comment__bottom-left">
-              <div class="comment__bottom-avatar"></div>
-            </div>
-            <div class=" comment__bottom-right">
-              <div class="comment__bottom-right-container">
-                <h3 class="comment__name">dvdvdvdv</h3>
-                <h4 class="comment__date">11/02/2023</h4>
-              </div>
-              <p class="comment__text">ddfdfdfdfdfdfdfdddffdfdfdfdfdffd</p>
-            </div>
-          </div>
-        </div>
+        <div class="comment__bottom"></div>
       </section>
     </main>
     <footer class="footer">
