--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         </a>
         <ul class="primary-nav__list">
           <li class="primary-nav__item">
-            <a class="primary-nav__link primary-nav__link--active" href=""
+            <a class="primary-nav__link primary-nav__link--active" href="./index.html"
               >Biography</a
             >
           </li>
           <li class="primary-nav__item">
-            <a class="primary-nav__link" href="">Shows</a>
+            <a class="primary-nav__link" href="./pages/shows.html">Shows</a>
           </li>
         </ul>
       </nav>
