--- a/pages/shows.html
+++ b/pages/shows.html
@@ -9,7 +9,7 @@
 <body>
         <header class="header">
           <nav class="primary-nav">
-            <a class="primary-nav__logo-link" href="./index.html">
+            <a class="primary-nav__logo-link" href="../index.html">
                 <img
               class="primary-nav__logo"
               src="../assets/logos/Logo-bandsite.svg"
@@ -31,8 +31,10 @@
             <div class="hero__layer">
                 <div class="hero__container">
                     <h2 class="hero__album">Beautiful Beasts Album</h2>
-                    <h1 class="hero__heading">Stripes of Yellow x For the Stings</h1>
-                    <iframe width="100%" height="126" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/256256957&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/eminemofficial" title="Eminem" target="_blank" style="color: #cccccc; text-decoration: none;">Eminem</a> · <a href="https://soundcloud.com/eminemofficial/lose-yourself" title="Lose Yourself" target="_blank" style="color: #cccccc; text-decoration: none;">Lose Yourself</a></div>            </div>
+                    <div class="hero__wrapper">
+                        <h1 class="hero__heading">Stripes of Yellow x For the Stings</h1>
+                        <iframe class="hero__music" width="100%" height="126" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/256256957&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>            </div>
+                    </div>
           </section>
         </header>
         <main>
