fixed the textect color for about, comment, photogallery and shows sections

--- a/index.html
+++ b/index.html
@@ -76,64 +76,66 @@
             <img
               class="photo-gallery__img"
               src="./assets/images/Photo-gallery-1.jpg"
-              alt="Concert Photo"
+              alt="Concert Crowd"
             />
             <img
               class="photo-gallery__img"
               src="./assets/images/Photo-gallery-2.jpg"
-              alt="Concert Photo"
+              alt="Concert Girl"
             />
             <img
               class="photo-gallery__img"
               src="./assets/images/Photo-gallery-3.jpg"
-              alt="Concert Photo"
+              alt="Concert hands in the air photo"
             />
             <img
               class="photo-gallery__img"
               src="./assets/images/Photo-gallery-4.jpg"
-              alt="Concert Photo"
+              alt="Concert Girl 2"
             />
             <img
               class="photo-gallery__img"
               src="./assets/images/Photo-gallery-5.jpg"
-              alt="Concert Photo"
+              alt="Concert Hands in the air photo 2"
             />
             <img
               class="photo-gallery__img"
               src="./assets/images/Photo-gallery-6.jpg"
-              alt="Concert Photo"
+              alt="Concert Artist"
             />
             <img
               class="photo-gallery__img"
               src="./assets/images/Photo-gallery-7.jpg"
-              alt="Concert Photo"
+              alt="Concert Stage"
             />
             <img
               class="photo-gallery__img"
               src="./assets/images/Photo-gallery-8.jpg"
-              alt="Concert Photo"
+              alt="Concert DJ"
             />
             <img
               class="photo-gallery__img"
               src="./assets/images/Photo-gallery-9.jpg"
-              alt="Concert Photo"
+              alt="Concert Celebration"
             />
           </div>
         </div>
       </section>
       <section class="comment">
         <h2 class="comment__heading">Join the Conversation</h2>
-        <div class="comment__top">
-          <img class="comment__avatar" src="./assets/images/Mohan-muruge.jpg" alt="Avatar Image">
-            <form class="comment__form" action="">
-              <label class="comment__label" for="name">Name</label>
-              <input class="comment__input" type="text" name="name" id="name" placeholder="Enter your name">
-              <label class="comment__label" for="comment">Comment</label>
-              <textarea class="comment__txt-area" name="comment" id="comment" cols="30" rows="5" placeholder="Add a new comment"></textarea>
-              <input class="comment__btn" type="submit" value="COMMENT">
-            </form>
+        <div class="comment__container">
+          <div class="comment__top">
+            <img class="comment__avatar" src="./assets/images/Mohan-muruge.jpg" alt="Avatar Image">
+              <form class="comment__form" action="">
+                <label class="comment__label" for="name">Name</label>
+                <input class="comment__input" type="text" name="name" id="name" placeholder="Enter your name">
+                <label class="comment__label" for="comment">Comment</label>
+                <textarea class="comment__txt-area" name="comment" id="comment" cols="30" rows="5" placeholder="Add a new comment"></textarea>
+                <input class="comment__btn" type="submit" value="COMMENT">
+              </form>
+          </div>
+          <div class="comment__bottom"></div>
         </div>
-        <div class="comment__bottom"></div>
       </section>
     </main>
     <footer class="footer">
