--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
         <h2 class="comment__heading">Join the Conversation</h2>
         <div class="comment__container">
           <div class="comment__top">
-            <img class="comment__avatar" src="./assets/images/Mohan-muruge.jpg" alt="Avatar Image">
+            <div class="comment__avatar"></div>
+            <!-- <img class="comment__avatar" src="./assets/images/Mohan-muruge.jpg" alt="Avatar Image"> -->
               <form class="comment__form" action="">
                 <label class="comment__label" for="name">Name</label>
                 <input class="comment__input" type="text" name="name" id="name" placeholder="Enter your name">
@@ -142,21 +143,27 @@
       <div class="footer__container">
         <h2 class="footer__heading">Get in Touch</h2>
         <div class="footer__icons">
-          <img
+          <a href="https://www.instagram.com/">
+            <img
             class="footer__icon"
             src="./assets/icons/SVG/Icon-instagram.svg"
             alt="Instagram icon"
           />
-          <img
+          </a>
+          <a href="https://www.facebook.com/">
+            <img
             class="footer__icon"
             src="./assets/icons/SVG/Icon-facebook.svg"
             alt="Facebook icon"
           />
-          <img
+          </a>
+          <a href="https://twitter.com/">
+            <img
             class="footer__icon"
             src="./assets/icons/SVG/Icon-twitter.svg"
             alt="Twitter icon"
           />
+          </a>
         </div>
         <div class="company">
           <div class="company__container">
