Made some more layout changes

--- a/index.html
+++ b/index.html
@@ -143,21 +143,21 @@
       <div class="footer__container">
         <h2 class="footer__heading">Get in Touch</h2>
         <div class="footer__icons">
-          <a href="https://www.instagram.com/">
+          <a href="https://www.instagram.com/" target="_blank">
             <img
             class="footer__icon"
             src="./assets/icons/SVG/Icon-instagram.svg"
             alt="Instagram icon"
           />
           </a>
-          <a href="https://www.facebook.com/">
+          <a href="https://www.facebook.com/" target="_blank">
             <img
             class="footer__icon"
             src="./assets/icons/SVG/Icon-facebook.svg"
             alt="Facebook icon"
           />
           </a>
-          <a href="https://twitter.com/">
+          <a href="https://twitter.com/" target="_blank">
             <img
             class="footer__icon"
             src="./assets/icons/SVG/Icon-twitter.svg"
