--- a/pages/shows.html
+++ b/pages/shows.html
@@ -55,21 +55,27 @@
             <div class="footer__container">
               <h2 class="footer__heading">Get in Touch</h2>
               <div class="footer__icons">
-                <img
+                <a href="https://www.instagram.com/" target="_blank">
+                  <img
                   class="footer__icon"
                   src="../assets/icons/SVG/Icon-instagram.svg"
                   alt="Instagram icon"
                 />
-                <img
+                </a>
+                <a href="https://www.facebook.com/" target="_blank">
+                  <img
                   class="footer__icon"
                   src="../assets/icons/SVG/Icon-facebook.svg"
                   alt="Facebook icon"
                 />
-                <img
+                </a>
+                <a href="https://twitter.com/" target="_blank">
+                  <img
                   class="footer__icon"
                   src="../assets/icons/SVG/Icon-twitter.svg"
                   alt="Twitter icon"
                 />
+                </a>
               </div>
               <div class="company">
                 <div class="company__container">
