got comments to display

--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@
         </p>
       </div>
     </footer>
-    <script src="./scripts/index-page.js"></script>
+    <script src="./scripts/index-page.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+
   </body>
 </html>
