--- a/pages/shows.html
+++ b/pages/shows.html
@@ -121,6 +121,7 @@
               </p>
             </div>
           </footer>
-          <script src="../scripts/build-shows-page.js"></script>
+          <script src="../scripts/build-shows-page.js" type="module"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
 </body>
 </html>
