--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@
         <div class="comment__container">
           <div class="comment__top">
             <div class="comment__avatar"></div>
-            <!-- <img class="comment__avatar" src="./assets/images/Mohan-muruge.jpg" alt="Avatar Image"> -->
               <form class="comment__form" action="">
                 <label class="comment__label" for="name">Name</label>
                 <input class="comment__input" type="text" name="name" id="name" placeholder="Enter your name">
@@ -135,7 +134,8 @@
                 <input class="comment__btn" type="submit" value="COMMENT">
               </form>
           </div>
-          <div class="comment__bottom"></div>
+          <div class="comment__bottom">
+          </div>
         </div>
       </section>
     </main>
