--- a/pages/shows.html
+++ b/pages/shows.html
@@ -1,127 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shows</title>
-    <link rel="stylesheet" href="../styles/shows.css">
-</head>
-<body>
-        <header class="header">
-          <nav class="primary-nav">
-            <a class="primary-nav__logo-link" href="../index.html">
-                <img
-              class="primary-nav__logo"
-              src="../assets/logos/Logo-bandsite.svg"
-              alt=" Bandsite logo"
-            />
-            </a>
-            <ul class="primary-nav__list">
-              <li class="primary-nav__item">
-                <a class="primary-nav__link" href="../index.html"
-                  >Biography</a
-                >
-              </li>
-              <li class="primary-nav__item">
-                <a class="primary-nav__link primary-nav__link--active" href="./pages/shows.html">Shows</a>
-              </li>
-            </ul>
-          </nav>
-          <section class="hero">
-            <div class="hero__layer">
-                <div class="hero__container">
-                    <h2 class="hero__album">Beautiful Beasts Album</h2>
-                    <div class="hero__wrapper">
-                        <h1 class="hero__heading">Stripes of Yellow x For the Stings</h1>
-                        <iframe class="hero__music" width="100%" height="126" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/256256957&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>            </div>
-                    </div>
-          </section>
-        </header>
-        <main>
-            <section class="shows">
-                <h2 class="shows__header">Shows</h2>
-                <!-- <div class="shows__container">
-                    <h4 class="shows__title">Date</h4>
-                    <h3 class="shows__date">Mon Sept 09 2024</h3>
-                    <h4 class="shows__title">Venue</h4>
-                    <h3 class="shows__venue">Ronald Lane</h3>
-                    <h4 class="shows__title">Location</h4>
-                    <h3 class="shows__location">San Francisco, CA</h3>
-                    <button class="shows__btn">Buy Tickets</button>
-                </div> -->
-            </section>
-        </main>
-        <footer class="footer">
-            <div class="footer__container">
-              <h2 class="footer__heading">Get in Touch</h2>
-              <div class="footer__icons">
-                <a href="https://www.instagram.com/" target="_blank">
-                  <img
-                  class="footer__icon"
-                  src="../assets/icons/SVG/Icon-instagram.svg"
-                  alt="Instagram icon"
-                />
-                </a>
-                <a href="https://www.facebook.com/" target="_blank">
-                  <img
-                  class="footer__icon"
-                  src="../assets/icons/SVG/Icon-facebook.svg"
-                  alt="Facebook icon"
-                />
-                </a>
-                <a href="https://twitter.com/" target="_blank">
-                  <img
-                  class="footer__icon"
-                  src="../assets/icons/SVG/Icon-twitter.svg"
-                  alt="Twitter icon"
-                />
-                </a>
-              </div>
-              <div class="company">
-                <div class="company__container">
-                  <h3 class="company__heading">The Bees Knees Management</h3>
-                  <p class="company__text">
-                    503 Broadway Penthouse,<br />
-                    New York, NY 10012, USA<br />
-                  </p>
-                  <a class="company__email" href="mailto:info@thebeesknees.com"
-                    >info@thebeesknees.com</a
-                  >
-                </div>
-                <div class="company__container">
-                  <h3 class="company__heading">Limitless Artist Group</h3>
-                  <p class="company__text">
-                    Booking Agent for<br />
-                    US / South America / Japan<br />
-                  </p>
-                  <a class="company__email" href="mailto:bookings@limitlessag.com"
-                    >bookings@limitlessag.com</a
-                  >
-                </div>
-                <div class="company__container">
-                  <h3 class="company__heading">ARCH Entertainment</h3>
-                  <p class="company__text">
-                    Booking Agent for<br />
-                    UK / EU / AU<br />
-                  </p>
-                  <a
-                    class="company__email"
-                    href="mailto:bookings@archentertainment.com"
-                    >bookings@archentertainment.com</a
-                  >
-                </div>
-              </div>
-              <img
-                class="footer__logo"
-                src="../assets/logos/Logo-bandsite.svg"
-                alt="Bandsite logo"
-              />
-              <p class="footer__text">
-                Copyright The Bees Knees &copy; 2023 All Rights Reserved
-              </p>
+    <link rel="stylesheet" href="../styles/shows.css" />
+  </head>
+  <body>
+    <header class="header">
+      <nav class="primary-nav">
+        <a class="primary-nav__logo-link" href="../index.html">
+          <img
+            class="primary-nav__logo"
+            src="../assets/logos/Logo-bandsite.svg"
+            alt=" Bandsite logo"
+          />
+        </a>
+        <ul class="primary-nav__list">
+          <li class="primary-nav__item">
+            <a class="primary-nav__link" href="../index.html">Biography</a>
+          </li>
+          <li class="primary-nav__item">
+            <a
+              class="primary-nav__link primary-nav__link--active"
+              href="./pages/shows.html"
+              >Shows</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <section class="hero">
+        <div class="hero__layer">
+          <div class="hero__container">
+            <h2 class="hero__album">Beautiful Beasts Album</h2>
+            <div class="hero__wrapper">
+              <h1 class="hero__heading">Stripes of Yellow x For the Stings</h1>
+              <iframe
+                class="hero__music"
+                width="100%"
+                height="126"
+                scrolling="no"
+                frameborder="no"
+                allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/256256957&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
+              ></iframe>
+              <div
+                style="
+                  font-size: 10px;
+                  color: #cccccc;
+                  line-break: anywhere;
+                  word-break: normal;
+                  overflow: hidden;
+                  white-space: nowrap;
+                  text-overflow: ellipsis;
+                  font-family: Interstate, Lucida Grande, Lucida Sans Unicode,
+                    Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+                  font-weight: 100;
+                "
+              ></div>
             </div>
-          </footer>
-          <script src="../scripts/build-shows-page.js" type="module"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
-</body>
+          </div>
+        </div>
+      </section>
+    </header>
+    <main>
+      <section class="shows">
+        <h2 class="shows__header">Shows</h2>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__container">
+        <h2 class="footer__heading">Get in Touch</h2>
+        <div class="footer__icons">
+          <a href="https://www.instagram.com/" target="_blank">
+            <img
+              class="footer__icon"
+              src="../assets/icons/SVG/Icon-instagram.svg"
+              alt="Instagram icon"
+            />
+          </a>
+          <a href="https://www.facebook.com/" target="_blank">
+            <img
+              class="footer__icon"
+              src="../assets/icons/SVG/Icon-facebook.svg"
+              alt="Facebook icon"
+            />
+          </a>
+          <a href="https://twitter.com/" target="_blank">
+            <img
+              class="footer__icon"
+              src="../assets/icons/SVG/Icon-twitter.svg"
+              alt="Twitter icon"
+            />
+          </a>
+        </div>
+        <div class="company">
+          <div class="company__container">
+            <h3 class="company__heading">The Bees Knees Management</h3>
+            <p class="company__text">
+              503 Broadway Penthouse,<br />
+              New York, NY 10012, USA<br />
+            </p>
+            <a class="company__email" href="mailto:info@thebeesknees.com"
+              >info@thebeesknees.com</a
+            >
+          </div>
+          <div class="company__container">
+            <h3 class="company__heading">Limitless Artist Group</h3>
+            <p class="company__text">
+              Booking Agent for<br />
+              US / South America / Japan<br />
+            </p>
+            <a class="company__email" href="mailto:bookings@limitlessag.com"
+              >bookings@limitlessag.com</a
+            >
+          </div>
+          <div class="company__container">
+            <h3 class="company__heading">ARCH Entertainment</h3>
+            <p class="company__text">
+              Booking Agent for<br />
+              UK / EU / AU<br />
+            </p>
+            <a
+              class="company__email"
+              href="mailto:bookings@archentertainment.com"
+              >bookings@archentertainment.com</a
+            >
+          </div>
+        </div>
+        <img
+          class="footer__logo"
+          src="../assets/logos/Logo-bandsite.svg"
+          alt="Bandsite logo"
+        />
+        <p class="footer__text">
+          Copyright The Bees Knees &copy; 2023 All Rights Reserved
+        </p>
+      </div>
+    </footer>
+    <script src="../scripts/build-shows-page.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+  </body>
 </html>
